welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value haveBiscuit
                    while(!estSurBiscuit()) {avance()}; recule();if(haveBiscuit()){ poseBiscuit()};recule()
                                                                    ^